# pdf-extractext

./: CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
AGENT/: AGENTS.md
api/: main.py
application/: checksum.py  document_service.py  exceptions.py  pdf_extractor.py
data/: config.py  connection.py  models.py  repositories.py  repository.py
docs/superpowers/specs/: 2026-06-03-docker-mongodb-persist-design.md
presentation/: main.py
src/services/: pdf_service.py
tests/: test_api.py  test_checksum.py  test_database.py  test_pdf_extractor.py  test_validator.py
